--- a/src/builtins/settings/publish/style.css
+++ b/src/builtins/settings/publish/style.css
@@ -1,3 +1,17 @@
+.q-switch {
+    position: relative;
+}
+
+.q-switch > input {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    appearance: none !important;
+    z-index: 1;
+}
+
 .qqntim-settings-panel-open
     .setting-main
     .setting-main__content:not(.qqntim-settings-panel),
@@ -7,9 +21,13 @@ body:not(.qqntim-settings-panel-open)
     display: none !important;
 }
 
+.qqntim-settings-panel {
+    padding: 20px 16px 70px !important;
+}
+
 .qqntim-settings-panel-section-title {
     padding: 8px;
-    font-size: 17px;
+    font-size: min(var(--font_size_2), 18px) !important;
 }
 
 .qqntim-settings-panel-section-content {
@@ -33,14 +51,53 @@ body:not(.qqntim-settings-panel-open)
     justify-content: center;
     gap: 5px;
     white-space: nowrap;
-    flex: 1;
+    flex: 10;
 }
 
 .qqntim-settings-panel-settings-versions-item > h3 {
-    font-size: 15px;
+    font-size: min(var(--font_size_3), 18px) !important;
 }
 
 .qqntim-settings-panel-settings-versions-item > div {
-    font-size: 15px;
+    font-size: min(var(--font_size_2), 16px) !important;
     color: var(--text_secondary_01);
+}
+
+.qqntim-settings-panel-box {
+    display: flex;
+    flex-direction: column;
+}
+
+.qqntim-settings-panel-box-item {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    min-height: 44px;
+    padding: 8px 0;
+}
+
+.qqntim-settings-panel-box-item > span {
+    display: flex;
+    flex-direction: column;
+}
+
+.qqntim-settings-panel-box-item-title {
+    font-size: min(var(--font_size_3), 18px) !important;
+}
+
+.qqntim-settings-panel-box-item-description {
+    font-size: min(var(--font_size_2), 16px) !important;
+    color: var(--text_secondary_01);
+}
+
+.qqntim-settings-panel-box-item:not(.qqntim-settings-panel-box-item-last) {
+    border-bottom: 1px solid var(--divider_standard);
+}
+
+.qqntim-settings-panel-save {
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
 }
